<resources>
    <string name="app_name">Babble</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="choose_username">Choose a Username</string>
    <string name="next">Next</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms_text_view">By signing up, you agree to the Terms of Service and acknowledge the Privacy Policy.</string>
    <string name="sign_up">Sign Up</string>
    <string name="check_connection">Please check your network connection</string>
    <string name="auth_failed">Authorization failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="have_an_account">Have an account?</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="add_post_hint">What\'s on your mind?</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">Please grant location permisson for better performance</string>
    <string name="ok">OK</string>
    <string name="allow_location">Allow Location</string>
    <string name="allow_your_location">Allow your location</string>
    <string name="ask_permission_info">We will need your location to show you streams of posts in your country</string>
    <string name="settings">Settings</string>
    <string name="key_contact_support">key_contact_support</string>
    <string name="key_version_name">key_version_name</string>
    <string name="key_terms_of_service">key_terms_of_service</string>
    <string name="key_privacy_policy">key_privacy_policy</string>
    <string name="key_delete_account">key_delete_account</string>
    <string name="key_change_name">key_change_name</string>
    <string name="key_change_password">key_change_password</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="app_version">App Version</string>
    <string name="enter_required_field">Please enter required fields</string>
    <string name="must_be_characters">Password must be at least 6 characters</string>
    <string name="pass_no_match">Passwords don\'t match</string>
    <string name="changing">Changing</string>
    <string name="password_changed">Password Changed</string>
    <string name="failed_to_update_password">Failed to update Password</string>
    <string name="change">Change</string>
    <string name="old_pass_incorrect">Old password is incorrect</string>
    <string name="account_deleted">Account Deleted</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="delete">Delete</string>
    <string name="account_delete_alert">Your all data will be deleted. Do you want to continue?</string>
    <string name="key_edit_profile">key_edit_profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_points_string">%1$s POINTS</string>
    <string name="username_text_view">\@%s</string>
    <string name="key_change_bio">key_change_bio</string>
    <string name="change_bio">Change Bio</string>
    <string name="no_posts_yet">No new posts from your country. Be the first.</string>

</resources>
